# Pathfinder-AI

./: .gitignore
Pathfinder ANN/: Genetic Algorithms.sln
Pathfinder ANN/Debug/: Genetic Algorithms.ilk  map.txt
Pathfinder ANN/Genetic Algorithms/: ANN.cpp  ANN.h  Console.cpp  Console.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Genetic Algorithms.vcxproj  Genetic Algorithms.vcxproj.filters  Input.cpp  Input.h  MapLoader.h  Pathfind.cpp  Sheet.h  level2.txt
Pathfinder ANN/Genetic Algorithms/1 - 50000/: Notes.txt
Pathfinder ANN/Genetic Algorithms/ANN Files/: Notes.txt
Pathfinder ANN/Genetic Algorithms/ANN Tests/: Notes.txt
Pathfinder ANN/Genetic Algorithms/ANN Tests/1-2000/: Start.bat
Pathfinder ANN/Genetic Algorithms/ANN Tests/100-5/: Start.bat
Pathfinder ANN/Genetic Algorithms/ANN Tests/2 - 5000 (The closest)/: Notes.txt
Pathfinder ANN/Genetic Algorithms/ANN Tests/2-120/: Start.bat
Pathfinder ANN/Genetic Algorithms/ANN Tests/2-60/: Start.bat
Pathfinder ANN/Genetic Algorithms/Debug/: vc141.idb
Pathfinder ANN/Genetic Algorithms/PathfinderAI/: CMakeLists.txt
Pathfinder ANN/Genetic Algorithms/PathfinderAI/src/: ANN.cpp  Console.cpp  Console.h  Entity.cpp  Game.cpp  Game.h  MapLoader.cpp  MapLoader.h
Pathfinder ANN/PathfinderAI/doxygen/: Doxyfile
Pathfinder ANN/PathfinderAI/runtime/: map.txt
Pathfinder ANN/PathfinderAI/src/: ANN.cpp  ANN.h  Console.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Input.cpp  Input.h  MapLoader.cpp  MapLoader.h  Pathfind.cpp  Pathfind.h  Sheet.h
Pathfinder ANN/enc_temp_folder/5dc857db66a3f998dc4d9cb556af7/: ANN.h
(+125 files in other folders)
